--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ev-dev-starter",
-  "version": "0.4.0",
+  "name": "ev-dev-portfolio-v3",
+  "version": "0.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
