--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
     "express": "^4.16.2",
+    "ionicons": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-entypo": "^1.3.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
